# metasearch

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README_EN.md  RELEASE_INFO.md  __main__.py  pyproject.toml
metasearch/: aggregate.py  app.py  engines.py
templates/: index.html
