[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metasearch"
version = "0.1.0"
description = "Self-hosted поисковый агрегатор"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
]

[project.scripts]
metasearch = "metasearch.__main__:main"
